[package]
name = "rit"
version = "0.7.0"
description = "CLI for managing Roblox projects"
authors = ["Esociety <esocietyhere@gmail.com>"]
license = "MIT"
repository = "https://github.com/Esocietyhere/rit"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "3.2.22", features = ["derive"] }
dotenv = "0.15.0"
fs-err = "2.9.0"
rbxcloud = "0.3.0"
regex = "1.7.3"
roblox_install = "1.0.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
tempfile = "3.8.0"
termcolor = "1.2.0"
tokio = { version = "1.26.0", features = ["full"] }
